fixed review covers

--- a/public/assets/css/userdetail.less
+++ b/public/assets/css/userdetail.less
@@ -176,6 +176,8 @@
                         width: 32px;
                         height: 32px;
                         border-radius: 4px;
+                        background-position: center;
+                        background-size: cover;
                     }
                     & .text {
                         margin-top: 6px;
